--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -21,6 +21,7 @@
     "@backstage/plugin-catalog-import": "^0.8.11",
     "@backstage/plugin-catalog-react": "^1.1.3",
     "@backstage/plugin-github-actions": "^0.5.8",
+    "@backstage/plugin-home": "^0.4.24",
     "@backstage/plugin-org": "^0.5.8",
     "@backstage/plugin-permission-react": "^0.4.4",
     "@backstage/plugin-scaffolder": "^1.5.0",
@@ -28,12 +29,13 @@
     "@backstage/plugin-search-react": "^1.0.1",
     "@backstage/plugin-tech-radar": "^0.5.15",
     "@backstage/plugin-techdocs": "^1.3.1",
-    "@backstage/plugin-techdocs-react": "^1.0.3",
     "@backstage/plugin-techdocs-module-addons-contrib": "^1.0.3",
+    "@backstage/plugin-techdocs-react": "^1.0.3",
     "@backstage/plugin-user-settings": "^0.4.7",
     "@backstage/theme": "^0.2.16",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
