api-extended initialised

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -89,7 +89,10 @@ catalog:
       target: ../../examples/template/template.yaml
       rules:
         - allow: [Template]
-
+    - type: file
+      target: ../../../backstage-templates/springboot-kotlin/template.yaml
+      rules:
+        - allow: [Template]
     # Local example organizational data
     - type: file
       target: ../../examples/org.yaml
