--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,13 +1,9 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: demo-backstage
-  description: An example of a Backstage application.
-  # Example for optional annotations
-  # annotations:
-  #   github.com/project-slug: backstage/backstage
-  #   backstage.io/techdocs-ref: dir:.
+  name: ${{ values.name | dump }}
+  description: ${{ values.description | dump }}
 spec:
-  type: website
-  owner: john@example.com
+  type: service
+  owner: user:guest
   lifecycle: experimental
