--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -33,6 +33,7 @@
     "@backstage/plugin-techdocs-react": "^1.0.3",
     "@backstage/plugin-user-settings": "^0.4.7",
     "@backstage/theme": "^0.2.16",
+    "@backstage/types": "^1.0.0",
     "@internal/plugin-api-docs-extended-my-version": "^0.1.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
