--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -35,6 +35,7 @@
     "@backstage/theme": "^0.2.16",
     "@backstage/types": "^1.0.0",
     "@internal/plugin-api-docs-extended-my-version": "^0.1.0",
+    "@internal/plugin-catalog-plugin-my-version": "^0.1.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.61",
